Ajout 2 nouvelles recherches d'hyper-paramètres dans le notebook

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1351,7 +1351,7 @@
    "id": "2055336a",
    "metadata": {},
    "source": [
-    "# On trouve les meilleurs hyper-paramètres pour lr, seq_len et batch size pour les données sur la température désaisonnalisée"
+    "# On trouve les meilleurs hyper-paramètres pour lr, seq_len et batch size pour les données sur la température désaisonnalisée pour les données de Paris, France"
    ]
   },
   {
@@ -8381,6 +8381,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "520be3cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# On crée un csv pour les résultats des différentes combinaisons\n",
+    "results_df.to_csv('Recherche_hypeparametres_temperatures.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 224,
    "id": "a2bf9e7c",
    "metadata": {},
@@ -8518,6 +8529,278 @@
     "print(f\"Naive - RMSE: {naive_rmse_temp:.4f},  MAE: {naive_mae_temp:.4f}, MAPE: {naive_mape_temp:.4f}\")\n",
     "\n",
     "eval.plot_prediction(model_temp, test_data_temp, val_data_temp, seq_len_opt, scaler)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "874fd988",
+   "metadata": {},
+   "source": [
+    "# On trouve les meilleurs hyper-paramètres pour lr, seq_len et batch size pour les données sur la température qui ne sont pas désaisonnalisées pour les données de Paris, France"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b47f9fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import product\n",
+    "import copy\n",
+    "from torch.utils.data import DataLoader\n",
+    "from torch import nn\n",
+    "import torch.optim as optim\n",
+    "import train_plot\n",
+    "from evaluation import set_seed\n",
+    "\n",
+    "# Paramètres fixes du modèle \n",
+    "pays_temp = 'France'\n",
+    "ville_temp = 'Paris'\n",
+    "type = 'temperature'\n",
+    "saison = True\n",
+    "prop = [0.7, 0.15, 0.15]\n",
+    "shift_temp = 1\n",
+    "DEVICE = \"cpu\"\n",
+    "EPOCHS = 1500\n",
+    "scaler=MinMaxScaler()\n",
+    "\n",
+    "# Hyper-paramètres testés\n",
+    "lrs_temp = [0.01, 0.001, 0.0001]\n",
+    "seq_lens_temp = list(range(3, 25, 3))\n",
+    "batchsizes_temp = [16, 32, 64]\n",
+    "\n",
+    "# On obtient les données qui seront utilisées pour entrainer le modèle\n",
+    "train_data_temp, val_data_temp, test_data_temp = extract_data(dataset_temp, pays_temp, prop, type, saison, ville = ville_temp, scaler=scaler)\n",
+    "\n",
+    "# Pour stocker les métriques des modèles testés\n",
+    "best_results_all = []\n",
+    "\n",
+    "for lr, seq_len, batch_size in product(lrs_temp, seq_lens_temp, batchsizes_temp):\n",
+    "    print(f\"Combinaison testée: lr={lr}, seq_len={seq_len}, batch_size={batch_size}\")\n",
+    "    set_seed(42)\n",
+    "\n",
+    "    dataset_train_temp = TrainDataset(train_data_temp, seq_len=seq_len, shift=shift_temp)\n",
+    "    train_dataloader_temp = DataLoader(dataset_train_temp, batch_size=batch_size, shuffle=True)\n",
+    "\n",
+    "    # On initialise le modèle\n",
+    "    model_temp = HybridLSTMGRU().to(DEVICE)\n",
+    "    criterion = nn.MSELoss()\n",
+    "    optimizer = optim.Adam(model_temp.parameters(), lr=lr)\n",
+    "    \n",
+    "    # On se prépare à noter les métriques pour le meilleur modèle de la combinaison testée\n",
+    "    best_val_rmse = float(\"inf\")\n",
+    "    best_model = None\n",
+    "    best_epoch = 0\n",
+    "    best_val_mae = None\n",
+    "    best_val_mape = None\n",
+    "    best_train_rmse = None\n",
+    "    best_train_mae = None\n",
+    "    best_train_mape = None\n",
+    "\n",
+    "    train_plot.metric_start_plot()\n",
+    "    for epoch in range(EPOCHS):\n",
+    "        model_temp.train()\n",
+    "        for X, y in train_dataloader_temp:\n",
+    "            X = X.unsqueeze(-1).to(DEVICE)\n",
+    "            y = y.unsqueeze(-1).to(DEVICE)\n",
+    "            \n",
+    "            optimizer.zero_grad()\n",
+    "            output = model_temp(X)\n",
+    "            loss = criterion(output, y)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            \n",
+    "        if (epoch-1) % 50 == 0:\n",
+    "            #train_plot.metric_plot_values(model, train_data, val_data, seq_len, scaler, epoch)\n",
+    "            train_rmse_temp, train_mae_temp, train_mape_temp = eval.evaluate(model_temp, train_data_temp, None, seq_len, scaler)\n",
+    "            val_rmse_temp, val_mae_temp, val_mape_temp = eval.evaluate(model_temp, val_data_temp, train_data_temp, seq_len, scaler)\n",
+    "            print(f\"Epoch {epoch}/{EPOCHS}\")\n",
+    "            print(f\"Training - RMSE: {train_rmse_temp:.4f},  MAE: {train_mae_temp:.4f}, MAPE: {train_mape_temp:.4f}\")\n",
+    "            print(f\"Validation - RMSE: {val_rmse_temp:.4f},  MAE: {val_mae_temp:.4f}, MAPE: {val_mape_temp:.4f}\")\n",
+    "            \n",
+    "            if val_rmse_temp < best_val_rmse:\n",
+    "                best_val_rmse = val_rmse_temp\n",
+    "                best_epoch = epoch\n",
+    "                best_train_rmse = train_rmse_temp\n",
+    "                best_model = copy.deepcopy(model_temp)\n",
+    "                best_val_mae = val_mae_temp\n",
+    "                best_val_mape = val_mape_temp\n",
+    "                best_train_mae = train_mae_temp\n",
+    "                best_train_mape = train_mape_temp\n",
+    "        \n",
+    "    print(f\"Meilleure RMSE de validation est de {best_val_rmse} pour {best_epoch} epochs\")    \n",
+    "    train_plot.metric_end_plot()\n",
+    "\n",
+    "    # On évalue le modèle sur les données test\n",
+    "    test_rmse_temp, test_mae_temp, test_mape_temp = eval.evaluate(best_model, test_data_temp, val_data_temp, seq_len, scaler)\n",
+    "    print(f\"Test - RMSE: {test_rmse_temp:.4f},  MAE: {test_mae_temp:.4f}, MAPE: {test_mape_temp:.4f}\")\n",
+    "    \n",
+    "    # Stocker les résultats pour cette combinaison dans un dictionnaire\n",
+    "    result = {\n",
+    "        \"lr\": lr,\n",
+    "        \"seq_len\": seq_len,\n",
+    "        \"batch_size\": batch_size,\n",
+    "        \"best_epoch\": best_epoch,\n",
+    "        \"train_rmse\": best_train_rmse,\n",
+    "        \"val_rmse\": best_val_rmse,\n",
+    "        \"test_rmse\": test_rmse_temp,\n",
+    "        \"test_mae\": test_mae_temp,\n",
+    "        \"test_mape\": test_mape_temp\n",
+    "    }\n",
+    "\n",
+    "    # On ajoute les résulats à la liste des résultats pour cette combinaison\n",
+    "    best_results_all.append(result)\n",
+    "\n",
+    "results_df_avec_saisonnailte = pd.DataFrame(best_results_all)\n",
+    "results_df_avec_saisonnailte"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a368eaeb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# On crée un csv pour les résultats des différentes combinaisons\n",
+    "results_df_avec_saisonnailte.to_csv('Recherche_hypeparametres_temperatures_avec_saiasonnalité.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8e36c91",
+   "metadata": {},
+   "source": [
+    "# On trouve les meilleurs hyper-paramètres pour lr, seq_len et batch size pour les données sur la température désaisonnalisées pour les données de Rome, Italie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7c3d98b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import product\n",
+    "import copy\n",
+    "from torch.utils.data import DataLoader\n",
+    "from torch import nn\n",
+    "import torch.optim as optim\n",
+    "import train_plot\n",
+    "from evaluation import set_seed\n",
+    "\n",
+    "# Paramètres fixes du modèle \n",
+    "pays_temp = 'Italy'\n",
+    "ville_temp = 'Rome'\n",
+    "type = 'temperature'\n",
+    "saison = False\n",
+    "prop = [0.7, 0.15, 0.15]\n",
+    "shift_temp = 1\n",
+    "DEVICE = \"cpu\"\n",
+    "EPOCHS = 1500\n",
+    "scaler=MinMaxScaler()\n",
+    "\n",
+    "# Hyper-paramètres testés\n",
+    "lrs_temp = [0.01, 0.001, 0.0001]\n",
+    "seq_lens_temp = list(range(3, 25, 3))\n",
+    "batchsizes_temp = [16, 32, 64]\n",
+    "\n",
+    "# On obtient les données qui seront utilisées pour entrainer le modèle\n",
+    "train_data_temp, val_data_temp, test_data_temp = extract_data(dataset_temp, pays_temp, prop, type, saison, ville = ville_temp, scaler=scaler)\n",
+    "\n",
+    "# Pour stocker les métriques des modèles testés\n",
+    "best_results_all = []\n",
+    "\n",
+    "for lr, seq_len, batch_size in product(lrs_temp, seq_lens_temp, batchsizes_temp):\n",
+    "    print(f\"Combinaison testée: lr={lr}, seq_len={seq_len}, batch_size={batch_size}\")\n",
+    "    set_seed(42)\n",
+    "\n",
+    "    dataset_train_temp = TrainDataset(train_data_temp, seq_len=seq_len, shift=shift_temp)\n",
+    "    train_dataloader_temp = DataLoader(dataset_train_temp, batch_size=batch_size, shuffle=True)\n",
+    "\n",
+    "    # On initialise le modèle\n",
+    "    model_temp = HybridLSTMGRU().to(DEVICE)\n",
+    "    criterion = nn.MSELoss()\n",
+    "    optimizer = optim.Adam(model_temp.parameters(), lr=lr)\n",
+    "    \n",
+    "    # On se prépare à noter les métriques pour le meilleur modèle de la combinaison testée\n",
+    "    best_val_rmse = float(\"inf\")\n",
+    "    best_model = None\n",
+    "    best_epoch = 0\n",
+    "    best_val_mae = None\n",
+    "    best_val_mape = None\n",
+    "    best_train_rmse = None\n",
+    "    best_train_mae = None\n",
+    "    best_train_mape = None\n",
+    "\n",
+    "    train_plot.metric_start_plot()\n",
+    "    for epoch in range(EPOCHS):\n",
+    "        model_temp.train()\n",
+    "        for X, y in train_dataloader_temp:\n",
+    "            X = X.unsqueeze(-1).to(DEVICE)\n",
+    "            y = y.unsqueeze(-1).to(DEVICE)\n",
+    "            \n",
+    "            optimizer.zero_grad()\n",
+    "            output = model_temp(X)\n",
+    "            loss = criterion(output, y)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            \n",
+    "        if (epoch-1) % 50 == 0:\n",
+    "            #train_plot.metric_plot_values(model, train_data, val_data, seq_len, scaler, epoch)\n",
+    "            train_rmse_temp, train_mae_temp, train_mape_temp = eval.evaluate(model_temp, train_data_temp, None, seq_len, scaler)\n",
+    "            val_rmse_temp, val_mae_temp, val_mape_temp = eval.evaluate(model_temp, val_data_temp, train_data_temp, seq_len, scaler)\n",
+    "            print(f\"Epoch {epoch}/{EPOCHS}\")\n",
+    "            print(f\"Training - RMSE: {train_rmse_temp:.4f},  MAE: {train_mae_temp:.4f}, MAPE: {train_mape_temp:.4f}\")\n",
+    "            print(f\"Validation - RMSE: {val_rmse_temp:.4f},  MAE: {val_mae_temp:.4f}, MAPE: {val_mape_temp:.4f}\")\n",
+    "            \n",
+    "            if val_rmse_temp < best_val_rmse:\n",
+    "                best_val_rmse = val_rmse_temp\n",
+    "                best_epoch = epoch\n",
+    "                best_train_rmse = train_rmse_temp\n",
+    "                best_model = copy.deepcopy(model_temp)\n",
+    "                best_val_mae = val_mae_temp\n",
+    "                best_val_mape = val_mape_temp\n",
+    "                best_train_mae = train_mae_temp\n",
+    "                best_train_mape = train_mape_temp\n",
+    "        \n",
+    "    print(f\"Meilleure RMSE de validation est de {best_val_rmse} pour {best_epoch} epochs\")    \n",
+    "    train_plot.metric_end_plot()\n",
+    "\n",
+    "    # On évalue le modèle sur les données test\n",
+    "    test_rmse_temp, test_mae_temp, test_mape_temp = eval.evaluate(best_model, test_data_temp, val_data_temp, seq_len, scaler)\n",
+    "    print(f\"Test - RMSE: {test_rmse_temp:.4f},  MAE: {test_mae_temp:.4f}, MAPE: {test_mape_temp:.4f}\")\n",
+    "    \n",
+    "    # Stocker les résultats pour cette combinaison dans un dictionnaire\n",
+    "    result = {\n",
+    "        \"lr\": lr,\n",
+    "        \"seq_len\": seq_len,\n",
+    "        \"batch_size\": batch_size,\n",
+    "        \"best_epoch\": best_epoch,\n",
+    "        \"train_rmse\": best_train_rmse,\n",
+    "        \"val_rmse\": best_val_rmse,\n",
+    "        \"test_rmse\": test_rmse_temp,\n",
+    "        \"test_mae\": test_mae_temp,\n",
+    "        \"test_mape\": test_mape_temp\n",
+    "    }\n",
+    "\n",
+    "    # On ajoute les résulats à la liste des résultats pour cette combinaison\n",
+    "    best_results_all.append(result)\n",
+    "\n",
+    "results_df_italie = pd.DataFrame(best_results_all)\n",
+    "results_df_italie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a64f0fec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# On crée un csv pour les résultats des différentes combinaisons\n",
+    "results_df_italie.to_csv('Recherche_hypeparametres_temperatures_italie.csv', index = False)"
    ]
   }
  ],
